Updates for endpoints
