# src/UIAPIServer/handlers.js
@@ -127,14 +127,14 @@ const createDFSPEndpoints = async(ctx) => {
  */
 const updateDFSPEndpoint = async(ctx) => {
     const { dfspId, mcmServerEndpoint } = ctx.state.conf;
-    const {epId} = ctx.state.params;
+    const {epId} = ctx.params;
     const dfsp = new DFSP({
         dfspId,
         mcmServerEndpoint,
         envId: ctx.params.envId,
         logger: ctx.state.logger,
     });
-    ctx.body = await dfsp.updateEndpoint({epId});
+    ctx.body = await dfsp.updateEndpoint({epId, ...ctx.request.body});
 };
 
 /**
@@ -143,7 +143,7 @@ const updateDFSPEndpoint = async(ctx) => {
  */
 const deleteDFSPEndpoint = async(ctx) => {
     const { dfspId, mcmServerEndpoint } = ctx.state.conf;
-    const {epId} = ctx.state.params;
+    const {epId} = ctx.params;
     const dfsp = new DFSP({
         dfspId,
         mcmServerEndpoint,
